--- a/package.json
+++ b/package.json
@@ -14,35 +14,24 @@
   "homepage": "https://github.com/panezhang/pcli#readme",
   "dependencies": {
     "chalk": "2.3.0",
-    "commander": "2.12.2",
-    "typescript": "2.6.2"
+    "commander": "2.12.2"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.0.3",
-    "babel-plugin-module-resolver": "3.0.0",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-stage-3": "6.24.1",
-    "babel-runtime": "6.26.0",
-    "eslint": "4.13.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.5.1",
+    "@types/node": "9.3.0",
     "rollup": "0.53.1",
-    "rollup-plugin-json": "2.3.0"
+    "rollup-plugin-json": "2.3.0",
+    "rollup-plugin-typescript": "0.8.1",
+    "tslint": "5.9.1",
+    "tslint-config-airbnb": "5.4.2",
+    "typescript": "2.6.2"
   },
   "bin": {
     "pcli": "bin/pcli",
     "pcli-hello": "bin/pcli-hello"
   },
   "scripts": {
+    "build": "rollup -c rollup.config.js",
     "start": "rollup -c rollup.config.js -w",
-    "lint": "eslint src *.js"
+    "lint": "tslint -c tslint.json -t verbose 'src/**/*.ts'"
   }
 }
